2004-02-18  Christopher Faylor  <cgf@redhat.com>

	* fork.cc (fork_child): Invert sense of test which defeated correct
	handling in a fork from a non-main thread.

	* dcrt0.cc (initial_env): Eliminate parameter and just send DebugBreak
	when appropriate.
	(dll_crt0_0): Reflect parameter change to initial_env.
	(dll_crt0_1): Don't call initial_env.

2004-02-18  Christopher Faylor  <cgf@redhat.com>

	* gendef (stabilize_sig_stack): New function.
	(setjmp): Import, add sig stack handling.  Store sig stack info.
	(longjmp): Call stabilize_sig_stack.  Restore sig stack info.
	* config/i386/setjmp.c: Remove.

2004-02-17  Corinna Vinschen  <corinna@vinschen.de>

	* fork.cc (fork_child): Move fixup_shms_after_fork so that
	signal_arrived is initialized when calling it.

2004-02-17  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (clean): Clean libserver, too.

	* fhandler.cc (fhandler_base::~fhandler_base): Remove path_conv cleanup.
	* syscalls.cc (chroot): Ditto.
	* path.cc (path_conv::~path_conv): Define new destructor.
	(conv_path_list_buf_size): Remove explicit path_conv cleanup.
	* path.h (path_conv::~path_conv): Declare new destructor.

2004-02-16  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Compile flock.o with -fomit-frame-pointer.

2004-02-16  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Compile dlfcn.o with -fomit-frame-pointer.

2004-02-16  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Compile delqueue.o with -fomit-frame-pointer.

2004-02-16  Pierre Humblet <pierre.humblet@ieee.org>

	* syscalls.cc (rename): Do not test the MoveFile error code
	where MoveFileEx exists.

2004-02-15  Christopher Faylor  <cgf@redhat.com>

	* cygheap.cc (_csbrk): Report more debugging details on failing
	condition.

2004-02-14  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Compile syscalls.o with -fomit-frame-pointer.

	* sigproc.cc: Eliminate unused variable.

2004-02-14  Corinna Vinschen  <corinna@vinschen.de>
