@@ -1,3 +1,7 @@
+2004-02-20  Corinna Vinschen  <corinna@vinschen.de>
+
+	* getopt.c: Replace with latest vanilla(!) OpenBSD version 1.16.
+
 2004-02-18  Christopher Faylor  <cgf@redhat.com>
 
 	* fork.cc (fork_child): Invert sense of test which defeated correct
